# proy_jomdec

./: README.md
proy_jomdec/: CMakeLists.txt  package.xml
proy_jomdec/proy_jomdec/: CMakeLists.txt  Package.xml  package.xml
proy_jomdec/proy_jomdec_my_world/: CMakeLists.txt
proy_jomdec/proy_jomdec_nav2_system/: setup.py
proy_jomdec_bringup/: package.xml  setup.cfg  setup.py
proy_jomdec_bringup/launch/: proy_jomdec_bringup.launch.py
proy_jomdec_deep_learning/: package.xml  setup.cfg  setup.py
proy_jomdec_deep_learning/proy_jomdec_deep_learning/: desconocido.py  proy_jomdec_detectar_objetos.py  robot_gandia_deep_learning.py
proy_jomdec_my_world/: package.xml
proy_jomdec_my_world/launch/: turtlebot3_my_world.launch.py
proy_jomdec_my_world/src/: model_world.py
proy_jomdec_my_world/test/: test_path.py
proy_jomdec_my_world/world/: burger.model  burger_pi.model
proy_jomdec_nav2_system/: package.xml  setup.py
proy_jomdec_nav2_system/config/: my_map.yaml  my_map2.pgm  my_map_real.yaml  my_nav2_params.yaml  my_nav2_params_1.yaml  my_nav2_params_sim.yaml  rviz2_conf_basica.rviz
proy_jomdec_nav2_system/config_rviz/: confi_rviz.rviz  config_rviz_real_camara.rviz
proy_jomdec_nav2_system/launch/: my_nav2_system.launch.py  my_nav2_waypoints_follower.launch.py  my_tb3_sim_nav2.launch.py  my_tb3_sim_nav2_real.launch.py  my_tb3_sim_waypoints_nav2.launch.py  my_waypoints_follower.py
proy_jomdec_nav2_system/proy_jomdec_nav2_system/: initial_pose_pub.py  my_waypoints_follower.py
proy_jomdec_speech/: package.xml  setup.cfg  setup.py
(+14 files in other folders)
