<?xml version="1.0?>
<?xml-model href=http://download.ros.org/schema/package_format3.xsd
schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>proy_jomdec</name>
 <version>2.1.4</version>
 <description>
 ROS 2 packages for jomdec Project
 </description>
 <maintainer email="softairjdec@gmail.com">jomdec</maintainer>
 <license>Apache 2.0</license>
 <url type="website">http://XXXXXXX</url>
 <url type="repository">https://github.com/JOM-DEC/ProyectoRobotica_JOMDEC.git</url>
 <url type="repository">https://github.com/JOM-DEC/Web_robotica.git</url>
 <author email="softairjdec@gmail.com">jomdec</author>
 <buildtool_depend>ament_cmake</buildtool_depend>
 <export>
 <build_type>ament_cmake</build_type>
 </export>
</package>